python/testData/quickFixes/PyAddImportQuickFixTest/userSkeletonStdlibModule/main.py
import sys

print(<error descr="Unresolved reference 'alembic'">alem<caret>bic</error>, sys)
